# server_side_webassambly

./: .gitignore  Cargo.toml
chapter02/hello_world/hello_world_guest/: Cargo.toml
chapter02/hello_world/hello_world_guest/src/: lib.rs
chapter03/hello_world_component/: greet.wit
chapter03/hello_world_component/hello_world_python_host/: main.py  pyproject.toml
chapter03/smart_cms/smartcms_test_guest/: guest.rs
chapter03/smart_cms/smartcms_test_host/: Cargo.toml  smart_cms.wit
chapter03/smart_cms/smartcms_test_host/src/: main.rs
chapter04/hello_world_wasi/hello_world_wasi_guest/: create_component.fish
chapter04/hello_world_wasi/hello_world_wasi_host/: Cargo.toml
chapter04/hello_world_wasi/hello_world_wasi_host/src/: main.rs
chapter04/smart_cms/: create_component.fish
chapter04/smart_cms/smartcms_kvstore_guest/: guest.js
chapter04/smart_cms/smartcms_ml_guest/: Cargo.toml
chapter04/smart_cms/smartcms_ml_guest/src/: lib.rs
chapter04/smart_cms/smartcms_ml_guest/wit/: world.wit
chapter04/smart_cms/smartcms_test_guest/transpile/: guest.js
chapter04/smart_cms/smartcms_test_host_chapter4/: Cargo.toml  smart_cms.wit
chapter04/wasi02/hello_world_wasi02/: Cargo.toml
chapter05/wasi_nn_example/: Cargo.toml
chapter05/wasi_nn_example/src/: main.rs
chapter06/hello-world-spin/: Cargo.toml  spin.toml
chapter06/hello-world-wasmcloud/: wadm.yaml
chapter06/hello-world-wasmcloud/src/: lib.rs
chapter06/smart-cms/: Cargo.toml  wadm.yaml  wasmcloud.toml
chapter06/smart-cms/src/: lib.rs
chapter06/smart-cms/wit/: world.wit
(+6 files in other folders)
